# ComfyUI-Schedulizer

./: LICENSE  README.md  __init__.py  prompt_schedule_converter.py  pyproject.toml  requirements.txt  whisper_node.py
workflows/: Whisper_Prompt_Schedule_v1.json
